# tbdex-rs

./: .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  Justfile  README.md  jitpack.yml  pom.xml  tbdex-rs.code-workspace
.github/workflows/: bound-kt-ci.yml  ci.yml  dylib.yml  dylibs.yml  gh-mvn-2.yml  gh-mvn.yml  macos.yml  publish-kt.yml  release-kotlin.yml  release-typescript.yml  release.yml  security.yml
arch/kt/cli/: settings.gradle.kts
arch/kt/cli/app/: build.gradle.kts
arch/kt/cli/gradle/: libs.versions.toml
arch/kt/lib/: pom.xml
arch/rust/: Cargo.toml  Justfile
arch/rust/crates/jeb5/: Cargo.toml  Dockerfile  build-so.sh  build.rs  uniffi.toml
bindings/tbdex_uniffi/: Cargo.toml  Dockerfile  DockerfileBindLinuxAmd64  DockerfileBuildAlpine  DockerfileBuildAlpine_old  build.rs  docker-build-linux-amd64  uniffi.toml
bindings/tbdex_uniffi/build_targets/x86_64-apple-darwin/: Dockerfile  build
bindings/tbdex_uniffi/libtargets/aarch64-apple-darwin/: build
bindings/tbdex_uniffi/libtargets/aarch64_apple_darwin/: build
bindings/tbdex_uniffi/libtargets/x86_64-apple-darwin/: build
bindings/tbdex_uniffi/libtargets/x86_64-unknown-linux-gnu/: Dockerfile  README.md  build
bindings/tbdex_uniffi/libtargets/x86_64-unknown-linux-musl/: Dockerfile  README.md  build
bindings/tbdex_uniffi/libtargets/x86_64_apple_darwin/: build
bindings/tbdex_uniffi/libtargets/x86_64_unknown_linux_gnu/: Dockerfile  build
bindings/tbdex_uniffi/libtargets/x86_64_unknown_linux_musl/: Dockerfile  build
bindings/tbdex_uniffi/src/: errors.rs  lib.rs  tbdex.udl
bindings/tbdex_uniffi/src/http/: balances.rs  exchanges.rs  mod.rs  offerings.rs
bindings/tbdex_uniffi/src/http_client/: balances.rs  exchanges.rs  mod.rs  offerings.rs
bindings/tbdex_uniffi/src/messages/: cancel.rs  close.rs  mod.rs  order.rs  order_instructions.rs  order_status.rs  quote.rs  rfq.rs
bindings/tbdex_uniffi/src/resources/: balance.rs  mod.rs  offering.rs
bindings/tbdex_wasm/: Cargo.toml
bindings/tbdex_wasm/src/: errors.rs  foreign_fetch.rs  js.rs  lib.rs
bindings/tbdex_wasm/src/http/: balances.rs  exchanges.rs  mod.rs  offerings.rs
bindings/tbdex_wasm/src/http_client/: balances.rs  exchanges.rs  mod.rs  offerings.rs
bindings/tbdex_wasm/src/messages/: cancel.rs  close.rs  mod.rs  order.rs  order_instructions.rs  order_status.rs  quote.rs  rfq.rs
bindings/tbdex_wasm/src/resources/: balance.rs  mod.rs  offering.rs
bindings/tbdex_wasm/src/web5/: bearer_did.rs  did.rs  document.rs  jwk.rs  key_managers.rs  mod.rs  portable_did.rs  presentation_definition.rs  signers.rs
bindings/uniffi/: Cargo.toml  build.rs
bindings/uniffi/src/: errors.rs  lib.rs  tbdex.udl
bindings/uniffi/src/resources/: mod.rs  offering.rs
bound/kt/: .maven_settings.xml  README.md  fix-load.sh  pom.xml
bound/typescript/: .mocharc.cjs.json  .mocharc.esm.json  README.md  bundle-browser-cjs.js  bundle-browser-esm.js  bundle-browser.js  bundle-nodejs-cjs.js  bundle-nodejs-esm.js  declaration-hack.sh  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json  tsconfig.test.json  web-test-runner.cjs.config.mjs  web-test-runner.config.mjs  web-test-runner.esm.config.mjs
bound/typescript/bundle-wasm/: build.sh  bundle.js  epilogue.js
bound/typescript/generate-mappings/: generated-mappings.ts  package-lock.json  package.json  tsconfig.json
bound/typescript/generate-mappings/src/: generate.ts  main.ts  wasm.ts
bound/typescript/scripts/: build.sh  bundle.js  bundle_tbdex.js  bundle_wasm.js
bound/typescript/src/: bearer-did.ts  errors.ts  index.ts  key-managers.ts  portable-did.ts  presentation-definition.ts  signers.ts
bound/typescript/src/credentials/: presentation-definition.ts
bound/typescript/src/crypto/: in-memory-key-manager.ts  jwk.ts  key-manager.ts  signer.ts
bound/typescript/src/dids/: bearer-did.ts  did.ts  document.ts  portable-did.ts
bound/typescript/src/http-client/: balances.ts  (+2 more)
bound/typescript/tests/: bundle-browser-cjs.js  bundle-browser-esm.js  bundle-browser.js  bundle-node.js  bundle-nodejs-cjs.js  bundle-nodejs-esm.js  parse-create-exchange-request-body.json  parse-reply-to-request-body-quote.json  test-vectors.test.ts  tsconfig.json
crates/pfi_exemplar_integration_test/: Cargo.toml
crates/pfi_exemplar_integration_test/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  message.rs  resource.rs  test_data.rs
crates/protocol/src/message/: close.rs  mod.rs  order.rs  order_status.rs  quote.rs
crates/protocol/src/messages/: mod.rs  order.rs  quote.rs
crates/protocol/src/resource/: mod.rs  offering.rs
crates/protocol/src/resources/: mod.rs  offering.rs
crates/tbdex/: Cargo.toml  build.rs
crates/tbdex/src/: errors.rs  jose.rs  json.rs  json_schemas.rs  lib.rs  signature.rs  signer.rs
crates/tbdex/src/http/: balances.rs  exchanges.rs  mod.rs  offerings.rs
crates/tbdex/src/http_client/: balances.rs  exchanges-old.rs  exchanges.rs  mod.rs  offerings.rs
crates/tbdex/src/http_client/exchanges/: http_body.rs  mod.rs
crates/tbdex/src/json_schemas/: generated.rs  mod.rs
crates/tbdex/src/messages/: cancel.rs  close.rs  mod.rs  order.rs  order_instructions.rs  order_status.rs  quote.rs  rfq.rs
crates/tbdex/src/resources/: balance.rs  mod.rs  offering.rs  resource_metadata.rs
docs/: API_DESIGN.md
docs/rfc-0001/: README.md
docs/rfcs/rfc-0001/: README.md
examples/custodial-wallet-kt/: README.md  settings.gradle.kts  simulate-frontend
examples/custodial-wallet-kt/app/: build.gradle.kts
examples/hosted-wallet-kt/: Dockerfile  DockerfileAlpine  DockerfileUbuntu  README.md  build.gradle.kts  docker-alpine  docker-ubuntu  run  settings.gradle.kts
examples/hosted-wallet-kt/pfi/: build.gradle.kts
examples/hosted-wallet-kt/wallet/: build.gradle.kts
examples/hosted-wallet-ts/: .env  README.md  package-lock.json  package.json  tsconfig.json
examples/hosted-wallet-ts/src/: hello.ts  index.ts  smoketest.ts
examples/pfi-kt/: configure  settings.gradle.kts
examples/pfi-kt/app/: build.gradle.kts
tests/jvm/: README.md  TbdexAcceptanceTest.java
(+137 files in other folders)
