[workspace]
members = ["bindings/tbdex_uniffi", "bindings/tbdex_wasm", "crates/tbdex"]
default-members = ["crates/tbdex"]
resolver = "2"

[workspace.package]
homepage = "https://github.com/TBD54566975/tbdex-rs"
repository = "https://github.com/TBD54566975/tbdex-rs.git"
license-file = "LICENSE"

[workspace.dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
http-std = { git = "https://github.com/TBD54566975/web5-rs", rev = "79989c1630fdc82fd9d10e1c1e0734e0aa7480bc" }
web5 = { git = "https://github.com/TBD54566975/web5-rs", rev = "79989c1630fdc82fd9d10e1c1e0734e0aa7480bc" }
web5_uniffi_wrapper = { git = "https://github.com/TBD54566975/web5-rs", rev = "79989c1630fdc82fd9d10e1c1e0734e0aa7480bc" }

