[package]
name = "tbdex_uniffi"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
serde_json = { workspace = true }
tbdex = { path = "../../crates/tbdex" }
thiserror = { workspace = true }
uniffi = { version = "0.27.1", features = ["cli"] }
web5 = { workspace = true }
web5_uniffi_wrapper = { git = "https://github.com/TBD54566975/web5-rs", rev = "76adcba82bc2547f09cb70435b5528b7b64090bd" }

[dependencies.openssl]
version = "0.10"
optional = true
features = ["vendored"]

[features]
default = []
x86_64_apple_darwin = ["openssl"] 

[build-dependencies]
uniffi = { version = "0.27.1", features = ["build"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"