[package]
name = "tbdex_wasm"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
tbdex = { path = "../../crates/tbdex" }
wasm-bindgen = "0.2.93"
web5 = { workspace = true }

[lib]
crate-type = ["cdylib"]