[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
type-safe-id = { version = "0.2.1", features = ["serde"] }
thiserror = "1.0.50"