[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
credentials = { git = "https://github.com/TBD54566975/web5-rs", rev = "694db64b72a92e17880c87d31a4bf11fe3bb8793"}
jsonschema = "0.17.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
type-safe-id = { version = "0.2.1", features = ["serde"] }
thiserror = "1.0.50"
serde_with = "3.4.0"
