[package]
name = "tbdex"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = "0.22.0"
chrono = "0.4.38"
josekit = "0.8.6"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
sha2 = "0.10.8"
serde = { workspace = true }
serde_jcs = "0.1.0"
serde_json = { workspace = true }
thiserror = { workspace = true }
type-safe-id = { version = "0.3.0", features = ["serde"] }
uuid = "1.9.0"
web5 = { workspace = true }