[package]
name = "tbdex"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
build = "build.rs"

[dependencies]
base64 = "0.22.0"
chrono = "0.4.38"
jsonschema = { version = "0.18.0", default-features = false, features = [
  "draft201909",
  "draft202012",
] }
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
sha2 = "0.10.8"
serde = { workspace = true }
serde_jcs = "0.1.0"
serde_json = { workspace = true }
thiserror = { workspace = true }
type-safe-id = { version = "0.3.0", features = ["serde"] }
uuid = "1.9.0"
web5 = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
